--- a/skeleton-main/client/src/components/pages/search.css
+++ b/skeleton-main/client/src/components/pages/search.css
@@ -154,22 +154,88 @@ body {
   flex-direction: column;
   width: 100%;
   height: 100%;
+  align-items: center;
   /* background-color: red; */
 }
-.close-container {
+
+.title-container {
+  flex: 3;
+  height: 100%;
+  margin-top: 3vh;
+  width: 90%;
+  /* background-color: blue; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.buttons-container {
+  flex: 0.25;
+  flex-direction: row;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  /* margin-top: 2vh; */
+  /* margin-bottom: 2vh; */
+  /* background-color: pink; */
+  width: 80%;
+  height: 100%;
+}
+.btn-subcontainer {
+  display: flex;
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+/* .author-container {
+  height: 100%;
+  width: 100%;
   flex: 1;
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-end;
-  /* background-color: pink; */
-  margin-top: 2vh;
-  margin-right: 2vh;
-}
+  align-items: center;
+  justify-content: center;
+} */
+
 .booktitle {
   color: var(--darkpurple);
   font-family: Readex Pro;
   font-weight: bold;
   text-align: center;
+  font-size: 6vh;
+}
+
+.author {
+  color: var(--darkpurple);
+  font-family: Readex Pro;
+  font-weight: 500;
+  text-align: center;
+  font-size: 4vh;
+  margin-top: 1vh;
+}
+.description-container {
+  flex: 0.5;
+  display: flex;
+  justify-content: center;
+
+  align-items: center;
+  /* margin-top: 1vh; */
+  width: 95%;
+  /* background-color: green; */
+  margin-bottom: 5vh;
+}
+.desc-text {
+  text-align: center;
+  font-family: "Readex Pro";
+  color: var(--darkpurple);
+  font-size: 3.1vh;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  line-height: 1.4em; /* Adjust as needed */
+  height: 5.4em; /* For 3 lines, as an example */
 }
 .overlay {
   min-height: 100%;
